# lorenz-opengl

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  lorenz_solver.h  shader.h
shaders/: basic.frag  basic.vert
src/: camera.cpp  main.cpp  shader.cpp
